# document-processor

./: .gitignore  CLA.md  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  Document_Upload_Tester_v2.py  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  run.sh  test_upload.py  uruchom.sh  vite.config.js
.github/workflows/: cla.yml
src/: App.svelte  app.css  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  parser.rs  watcher.rs
